--- a/index.html
+++ b/index.html
@@ -94,12 +94,11 @@
 				<canvas id="tv" width="511" height="351"></canvas>
 				<center class="darken">
 						<img class="logo" src="assets/siglogo.png" alt="Synapse"><br>
-						<p class="nonot">By purchasing the software, you hereby agree to the <a href="https://pastebin.com/raw/9xjnZr7R"></a>Terms and Conditions</a>. If you do not agree with the Terms and Conditions, please refrain from purchasing and/or using the software.</p>
+						<p class="nonot">By purchasing the software, you hereby agree to the <a href="https://pastebin.com/raw/9xjnZr7R">Terms and Conditions</a>. If you do not agree with the Terms and Conditions, please refrain from purchasing and/or using the software.</p>
 						<p class="nonot">Roblox Payments are currently the cheapest with only <b>3$</b> instead of 5 since <b>100</b> robux is only <b>1$</b> </p>
-						<p class="nonot">We only accept <b>American</b> and <b>Canadian</b> gift cards, worth <b>10$</b>. Since they dont sell <b>5$</b> Gift Cards Activation can take up to 48-72 hours.</p>
-						<p class="nonot">Sending gift cards of a value lesser than 10$ will be redeemed without account activation due to the nature of our gift card processing system.</p>
+						<p class="nonot">We only accept <b>American</b> gift cards, worth <b>10$</b>. Since they dont sell <b>5$</b> Gift Cards Activation can take up to 48-72 hours.</p>
 						<p class="nonot">All payments are processed through the roblox game! Gift cards are redeemed there and so is robux! Paypal will give you a selly key to be redeemed there as well!.</p>
-						<p class="nonot">You canot now purchase with <b>PayPal</b> currently since we dont support it atm, (PS CREDITS TO CSMIT FOR THIS WEBSITE!)</p>
+						<p class="nonot">You cannot now purchase with <b>PayPal</b> currently since we dont support it atm</p>
 						<br><br><br>
 						<div style="overflow: hidden; display: flex; justify-content: center;">
 								<a href="#"><img class="loimg" src="assets/pp.png" alt="Selly.GG"></a>
