Enable Selly purchases and update purchase game

--- a/index.html
+++ b/index.html
@@ -19,22 +19,20 @@
 		<p class="nonot"><b>Advent</b> is a Roblox script hub created by <b>logre</b> and <b>xdJustice</b>. It has scripts for general usage and game-specific scripts.</p>
 		<p class="nonot">By purchasing the script, you hereby agree to the <a
 				href="tos.html">Terms and Conditions</a>. If you do not agree with the Terms
-			and Conditions, please refrain from purchasing and/or using the software.</p>
+			of Service, please refrain from purchasing and/or using the script.</p>
 		<p class="nonot">Robux payments are recommended due to their low price (<b>300 Robux</b>) and fast activation.
 		</p>
 		<p class="nonot">We only accept <b>American</b> gift cards, worth <b>$5 or more</b>. If your gift card is a multiple of <b>$3</b>, then you will receive multiple accounts. Gift cards must be unclaimed/unused; activation can
 			take up to 48-72 hours.</p>
 		<p class="nonot"><b>PayPal</b> purchases are processed through our Selly.GG page for <b>$3</b>; Other purchases
 			are processed through our purchase center on Roblox.</p>
-		<p class="nonot"><b>PayPal</b> purchases are currently disabled.</p>
 		<p class="nonot">If you are interested in buying, or already have, join our <a href="https://discord.me/advent-hub">Discord server</a>, where you can find the changelog, more scripts, and more!</p>
 		<p class="nonot">On behalf of our development team, thank your for your interest in Advent!</p>	
 
 		<br><br><br>
 		<div style="overflow: hidden; display: flex; justify-content: center;">
-			<a><img class="loimg" src="assets/pp.png" alt="Selly.GG"></a>
-			<a href="https://www.roblox.com/games/3169276497/Exodus-Purchase"><img class="loimg" src="assets/roblox.png"
-					alt="Roblox"></a>
+			<a href="https://selly.gg/p/4680d05f"><img class="loimg" src="assets/pp.png" alt="Selly.GG"></a>
+			<a href="https://www.roblox.com/games/3227064805/"><img class="loimg" src="assets/roblox.png" alt="Roblox"></a>
 		</div>
 	</center>
 	<script type="text/javascript" src="scripts/index.js"></script>
