--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
 			<a href="https://selly.gg/p/4680d05f"><img class="loimg" src="assets/pp.png" alt="Selly.GG"></a>
 			<a href="https://www.roblox.com/games/3227064805/"><img class="loimg" src="assets/roblox.png" alt="Roblox"></a>
 		</div>
+			<br>
+			<br>
+			<a href="https://mega.nz/#!vUN2hKwL!xHKofJeNr0kLLxK9JTLDMLQbxyZvP8tVISpba0KzalQ">
+			 <b>Other Sites</b>
+				</a>
+			<br>
+			<p class="check">If you are interested in cracks, movie downloads, etc go here</p>
 	</center>
 	<script type="text/javascript" src="scripts/index.js"></script>
 </body>
