--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 		</div>
 			<br>
 			<br>
-			<a href="https://mega.nz/#!vUN2hKwL!xHKofJeNr0kLLxK9JTLDMLQbxyZvP8tVISpba0KzalQ">
-			 <b>Other Sites</b>
+			<a href="">
+			 <b>Other Sites (Shut Off ATM)</b>
 				</a>
 			<br>
 			<p class="check">If you are interested in cracks, movie downloads, etc go here</p>
