--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 			<br>
 			<br>
 			<a href="">
-			 <b>Other Sites (Shut Off ATM)</b>
+			 <b>Site Index</b>
 				</a>
 			<br>
-			<p class="check">If you are interested in cracks, movie downloads, etc go here</p>
+			<p class="check">If you are interested in cracks, movie downloads, hand picked scripts, etc</p>
 	</center>
 	<script type="text/javascript" src="scripts/index.js"></script>
 </body>
