--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			 <b>Site Index</b>
 				</a>
 			<br>
-			<p class="check">If you are interested in cracks, movie downloads, hand picked scripts, etc</p>
+			<p class="check">If you are interested in cracks, movie downloads, hand picked scripts.</p>
 	</center>
 	<script type="text/javascript" src="scripts/index.js"></script>
 </body>
