--- a/menu.html
+++ b/menu.html
@@ -16,7 +16,7 @@
 	<canvas id="tv" width="511" height="351"></canvas>
 	<center class="darken">
 		<img class="logo" src="assets/siglogo.png" alt="Advent"><br>
-		<p class="nonot">Welcome to advents main menu! This part of the site is mainly just free downloads, hand picked scripts, and etc.
+		<p class="nonot">Welcome to advents main menu. This part of the site is mainly just free downloads, hand picked scripts, and etc.
             <b>Everything </b>here is being hosted for free by <b>xdJustice</b></p>
         <p class="nonot">If you somehow found your way here and are interested in joining our discord then click <a href="https://discord.me/advent-hub">here</a> we are a two man group
         that makes scripts and a script hub for roblox! Bellow starts the list of options</p>
